grammar/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> s
Rule 1     s -> block
Rule 2     block -> block instruccion
Rule 3     block -> instruccion
Rule 4     instruccion -> print
Rule 5     instruccion -> ifinstruction
Rule 6     instruccion -> switchinstruction
Rule 7     instruccion -> whileinstruction
Rule 8     instruccion -> forinstruction
Rule 9     instruccion -> declaration
Rule 10    instruccion -> arraydeclaration
Rule 11    instruccion -> assignment
Rule 12    instruccion -> breakstmt
Rule 13    instruccion -> continuestmt
Rule 14    instruccion -> functionstmt
Rule 15    instruccion -> call
Rule 16    instruccion -> returnstmt
Rule 17    instruccion -> interfacecreation
Rule 18    instruccion -> interdeclaration
Rule 19    instruccion -> listArray PYC
Rule 20    instruccion -> typeof PYC
Rule 21    instruccion -> parseint PYC
Rule 22    instruccion -> parsefloat PYC
Rule 23    print -> CONSOLE PUNTO LOG PARIZQ expressionList PARDER PYC
Rule 24    ifinstruction -> IF PARIZQ expression PARDER LLAVEIZQ block LLAVEDER
Rule 25    ifinstruction -> IF PARIZQ expression PARDER LLAVEIZQ block LLAVEDER else_if_list
Rule 26    ifinstruction -> IF PARIZQ expression PARDER LLAVEIZQ block LLAVEDER else
Rule 27    ifinstruction -> IF PARIZQ expression PARDER LLAVEIZQ block LLAVEDER else_if_list else
Rule 28    else_if_list -> else_if_list else_if
Rule 29    else_if_list -> else_if
Rule 30    else_if -> ELSE IF PARIZQ expression PARDER LLAVEIZQ block LLAVEDER
Rule 31    else -> ELSE LLAVEIZQ block LLAVEDER
Rule 32    switchinstruction -> SWITCH PARIZQ expression PARDER LLAVEIZQ caseList LLAVEDER
Rule 33    switchinstruction -> SWITCH PARIZQ expression PARDER LLAVEIZQ default LLAVEDER
Rule 34    switchinstruction -> SWITCH PARIZQ expression PARDER LLAVEIZQ caseList default LLAVEDER
Rule 35    caseList -> caseList case
Rule 36    caseList -> case
Rule 37    case -> CASE expression DOSPTS block
Rule 38    default -> DEFAULT DOSPTS block
Rule 39    whileinstruction -> WHILE PARIZQ expression PARDER LLAVEIZQ block LLAVEDER
Rule 40    forinstruction -> FOR PARIZQ declaration expression PYC expression PARDER LLAVEIZQ block LLAVEDER
Rule 41    declaration -> var_const ID DOSPTS type IG expression PYC
Rule 42    arraydeclaration -> var_const ID DOSPTS type dimension IG expression PYC
Rule 43    assignment -> ID indexes IG expression PYC
Rule 44    dimension -> dimension CORIZQ CORDER
Rule 45    dimension -> CORIZQ CORDER
Rule 46    interdeclaration -> var_const ID DOSPTS ID IG LLAVEIZQ interfaceContent LLAVEDER PYC
Rule 47    interfaceContent -> interfaceContent COMA ID DOSPTS expression
Rule 48    interfaceContent -> ID DOSPTS expression
Rule 49    var_const -> VAR
Rule 50    var_const -> CONST
Rule 51    assignment -> listArray IG expression PYC
Rule 52    assignment -> ID IG expression PYC
Rule 53    returnstmt -> RETURN expression PYC
Rule 54    returnstmt -> RETURN PYC
Rule 55    call -> ID PARIZQ expressionList PARDER PYC
Rule 56    call -> ID PARIZQ PARDER PYC
Rule 57    functionstmt -> FUNCTION ID funcparams functype LLAVEIZQ block LLAVEDER
Rule 58    funcparams -> PARIZQ paramsList PARDER
Rule 59    funcparams -> PARIZQ PARDER
Rule 60    interfacecreation -> INTERFACE ID LLAVEIZQ attributeList LLAVEDER
Rule 61    attributeList -> attributeList ID DOSPTS type PYC
Rule 62    attributeList -> ID DOSPTS type PYC
Rule 63    paramsList -> paramsList COMA parametro
Rule 64    paramsList -> parametro
Rule 65    parametro -> ID DOSPTS type
Rule 66    parametro -> ID DOSPTS type CORIZQ CORDER
Rule 67    functype -> DOSPTS type
Rule 68    functype -> <empty>
Rule 69    breakstmt -> BREAK PYC
Rule 70    continuestmt -> CONTINUE PYC
Rule 71    type -> NUMBER
Rule 72    type -> FLOAT
Rule 73    type -> STRING
Rule 74    type -> CHAR
Rule 75    type -> BOOLEAN
Rule 76    type -> ID
Rule 77    expressionList -> expressionList COMA expression
Rule 78    expressionList -> expression
Rule 79    expression -> OBJECT PUNTO KEYS PARIZQ expression PARDER
Rule 80    expression -> OBJECT PUNTO VALUES PARIZQ expression PARDER
Rule 81    expression -> expression MAS expression
Rule 82    expression -> expression MENOS expression
Rule 83    expression -> expression POR expression
Rule 84    expression -> expression DIVIDIDO expression
Rule 85    expression -> expression MODULO expression
Rule 86    expression -> expression MAYOR expression
Rule 87    expression -> expression MENOR expression
Rule 88    expression -> expression MAYORIG expression
Rule 89    expression -> expression MENORIG expression
Rule 90    expression -> expression IGIG expression
Rule 91    expression -> expression DIF expression
Rule 92    expression -> expression AND expression
Rule 93    expression -> expression OR expression
Rule 94    expression -> NOT expression
Rule 95    expression -> MENOS expression
Rule 96    expression -> expression INCREMENTO
Rule 97    expression -> PARIZQ expression PARDER
Rule 98    expression -> expression TERN expression DOSPTS expression
Rule 99    expression -> listArray
Rule 100   valor -> ENTERO
Rule 101   valor -> DECIMAL
Rule 102   valor -> CADENA
Rule 103   valor -> CARACTER
Rule 104   valor -> BOOLEANO
Rule 105   valor -> ID
Rule 106   expression -> CORIZQ expressionList CORDER
Rule 107   expression -> ID PARIZQ expressionList PARDER
Rule 108   expression -> ID PARIZQ PARDER
Rule 109   listArray -> listArray PUNTO TOSTRING PARIZQ PARDER
Rule 110   listArray -> listArray PUNTO TOLOWERCASE PARIZQ PARDER
Rule 111   listArray -> listArray PUNTO TOUPPERCASE PARIZQ PARDER
Rule 112   listArray -> listArray PUNTO POP PARIZQ PARDER
Rule 113   listArray -> listArray PUNTO JOIN PARIZQ PARDER
Rule 114   listArray -> listArray PUNTO PUSH expression
Rule 115   listArray -> listArray PUNTO INDEXOF expression
Rule 116   listArray -> listArray PUNTO LENGTH
Rule 117   listArray -> listArray PUNTO ID
Rule 118   listArray -> listArray indexes
Rule 119   listArray -> valor
Rule 120   indexes -> indexes CORIZQ expression CORDER
Rule 121   indexes -> CORIZQ expression CORDER
Rule 122   expression -> typeof
Rule 123   expression -> parseint
Rule 124   expression -> parsefloat
Rule 125   typeof -> TYPEOF expression
Rule 126   parseint -> PARSEINT expression
Rule 127   parsefloat -> PARSEFLOAT expression

Terminals, with rules where they appear

AND                  : 92
BOOLEAN              : 75
BOOLEANO             : 104
BREAK                : 69
CADENA               : 102
CARACTER             : 103
CASE                 : 37
CHAR                 : 74
COMA                 : 47 63 77
CONSOLE              : 23
CONST                : 50
CONTINUE             : 70
CORDER               : 44 45 66 106 120 121
CORIZQ               : 44 45 66 106 120 121
DECIMAL              : 101
DEFAULT              : 38
DIF                  : 91
DIVIDIDO             : 84
DOSPTS               : 37 38 41 42 46 47 48 61 62 65 66 67 98
ELSE                 : 30 31
ENTERO               : 100
FLOAT                : 72
FOR                  : 40
FUNCTION             : 57
ID                   : 41 42 43 46 46 47 48 52 55 56 57 60 61 62 65 66 76 105 107 108 117
IF                   : 24 25 26 27 30
IG                   : 41 42 43 46 51 52
IGIG                 : 90
INCREMENTO           : 96
INDEXOF              : 115
INTERFACE            : 60
JOIN                 : 113
KEYS                 : 79
LENGTH               : 116
LLAVEDER             : 24 25 26 27 30 31 32 33 34 39 40 46 57 60
LLAVEIZQ             : 24 25 26 27 30 31 32 33 34 39 40 46 57 60
LOG                  : 23
MAS                  : 81
MAYOR                : 86
MAYORIG              : 88
MENOR                : 87
MENORIG              : 89
MENOS                : 82 95
MODULO               : 85
NOT                  : 94
NUMBER               : 71
OBJECT               : 79 80
OR                   : 93
PARDER               : 23 24 25 26 27 30 32 33 34 39 40 55 56 58 59 79 80 97 107 108 109 110 111 112 113
PARIZQ               : 23 24 25 26 27 30 32 33 34 39 40 55 56 58 59 79 80 97 107 108 109 110 111 112 113
PARSEFLOAT           : 127
PARSEINT             : 126
POP                  : 112
POR                  : 83
PUNTO                : 23 79 80 109 110 111 112 113 114 115 116 117
PUSH                 : 114
PYC                  : 19 20 21 22 23 40 41 42 43 46 51 52 53 54 55 56 61 62 69 70
RETURN               : 53 54
STRING               : 73
SWITCH               : 32 33 34
TERN                 : 98
TOLOWERCASE          : 110
TOSTRING             : 109
TOUPPERCASE          : 111
TYPEOF               : 125
VALUES               : 80
VAR                  : 49
WHILE                : 39
error                : 

Nonterminals, with rules where they appear

arraydeclaration     : 10
assignment           : 11
attributeList        : 60 61
block                : 1 2 24 25 26 27 30 31 37 38 39 40 57
breakstmt            : 12
call                 : 15
case                 : 35 36
caseList             : 32 34 35
continuestmt         : 13
declaration          : 9 40
default              : 33 34
dimension            : 42 44
else                 : 26 27
else_if              : 28 29
else_if_list         : 25 27 28
expression           : 24 25 26 27 30 32 33 34 37 39 40 40 41 42 43 47 48 51 52 53 77 78 79 80 81 81 82 82 83 83 84 84 85 85 86 86 87 87 88 88 89 89 90 90 91 91 92 92 93 93 94 95 96 97 98 98 98 114 115 120 121 125 126 127
expressionList       : 23 55 77 106 107
forinstruction       : 8
funcparams           : 57
functionstmt         : 14
functype             : 57
ifinstruction        : 5
indexes              : 43 118 120
instruccion          : 2 3
interdeclaration     : 18
interfaceContent     : 46 47
interfacecreation    : 17
listArray            : 19 51 99 109 110 111 112 113 114 115 116 117 118
parametro            : 63 64
paramsList           : 58 63
parsefloat           : 22 124
parseint             : 21 123
print                : 4
returnstmt           : 16
s                    : 0
switchinstruction    : 6
type                 : 41 42 61 62 65 66 67
typeof               : 20 122
valor                : 119
var_const            : 41 42 46
whileinstruction     : 7

Parsing method: LALR

state 0

    (0) S' -> . s
    (1) s -> . block
    (2) block -> . block instruccion
    (3) block -> . instruccion
    (4) instruccion -> . print
    (5) instruccion -> . ifinstruction
    (6) instruccion -> . switchinstruction
    (7) instruccion -> . whileinstruction
    (8) instruccion -> . forinstruction
    (9) instruccion -> . declaration
    (10) instruccion -> . arraydeclaration
    (11) instruccion -> . assignment
    (12) instruccion -> . breakstmt
    (13) instruccion -> . continuestmt
    (14) instruccion -> . functionstmt
    (15) instruccion -> . call
    (16) instruccion -> . returnstmt
    (17) instruccion -> . interfacecreation
    (18) instruccion -> . interdeclaration
    (19) instruccion -> . listArray PYC
    (20) instruccion -> . typeof PYC
    (21) instruccion -> . parseint PYC
    (22) instruccion -> . parsefloat PYC
    (23) print -> . CONSOLE PUNTO LOG PARIZQ expressionList PARDER PYC
    (24) ifinstruction -> . IF PARIZQ expression PARDER LLAVEIZQ block LLAVEDER
    (25) ifinstruction -> . IF PARIZQ expression PARDER LLAVEIZQ block LLAVEDER else_if_list
    (26) ifinstruction -> . IF PARIZQ expression PARDER LLAVEIZQ block LLAVEDER else
    (27) ifinstruction -> . IF PARIZQ expression PARDER LLAVEIZQ block LLAVEDER else_if_list else
    (32) switchinstruction -> . SWITCH PARIZQ expression PARDER LLAVEIZQ caseList LLAVEDER
    (33) switchinstruction -> . SWITCH PARIZQ expression PARDER LLAVEIZQ default LLAVEDER
    (34) switchinstruction -> . SWITCH PARIZQ expression PARDER LLAVEIZQ caseList default LLAVEDER
    (39) whileinstruction -> . WHILE PARIZQ expression PARDER LLAVEIZQ block LLAVEDER
    (40) forinstruction -> . FOR PARIZQ declaration expression PYC expression PARDER LLAVEIZQ block LLAVEDER
    (41) declaration -> . var_const ID DOSPTS type IG expression PYC
    (42) arraydeclaration -> . var_const ID DOSPTS type dimension IG expression PYC
    (43) assignment -> . ID indexes IG expression PYC
    (51) assignment -> . listArray IG expression PYC
    (52) assignment -> . ID IG expression PYC
    (69) breakstmt -> . BREAK PYC
    (70) continuestmt -> . CONTINUE PYC
    (57) functionstmt -> . FUNCTION ID funcparams functype LLAVEIZQ block LLAVEDER
    (55) call -> . ID PARIZQ expressionList PARDER PYC
    (56) call -> . ID PARIZQ PARDER PYC
    (53) returnstmt -> . RETURN expression PYC
    (54) returnstmt -> . RETURN PYC
    (60) interfacecreation -> . INTERFACE ID LLAVEIZQ attributeList LLAVEDER
    (46) interdeclaration -> . var_const ID DOSPTS ID IG LLAVEIZQ interfaceContent LLAVEDER PYC
    (109) listArray -> . listArray PUNTO TOSTRING PARIZQ PARDER
    (110) listArray -> . listArray PUNTO TOLOWERCASE PARIZQ PARDER
    (111) listArray -> . listArray PUNTO TOUPPERCASE PARIZQ PARDER
    (112) listArray -> . listArray PUNTO POP PARIZQ PARDER
    (113) listArray -> . listArray PUNTO JOIN PARIZQ PARDER
    (114) listArray -> . listArray PUNTO PUSH expression
    (115) listArray -> . listArray PUNTO INDEXOF expression
    (116) listArray -> . listArray PUNTO LENGTH
    (117) listArray -> . listArray PUNTO ID
    (118) listArray -> . listArray indexes
    (119) listArray -> . valor
    (125) typeof -> . TYPEOF expression
    (126) parseint -> . PARSEINT expression
    (127) parsefloat -> . PARSEFLOAT expression
    (49) var_const -> . VAR
    (50) var_const -> . CONST
    (100) valor -> . ENTERO
    (101) valor -> . DECIMAL
    (102) valor -> . CADENA
    (103) valor -> . CARACTER
    (104) valor -> . BOOLEANO
    (105) valor -> . ID

    CONSOLE         shift and go to state 23
    IF              shift and go to state 24
    SWITCH          shift and go to state 25
    WHILE           shift and go to state 26
    FOR             shift and go to state 27
    ID              shift and go to state 29
    BREAK           shift and go to state 30
    CONTINUE        shift and go to state 31
    FUNCTION        shift and go to state 32
    RETURN          shift and go to state 33
    INTERFACE       shift and go to state 34
    TYPEOF          shift and go to state 36
    PARSEINT        shift and go to state 37
    PARSEFLOAT      shift and go to state 38
    VAR             shift and go to state 39
    CONST           shift and go to state 40
    ENTERO          shift and go to state 41
    DECIMAL         shift and go to state 42
    CADENA          shift and go to state 43
    CARACTER        shift and go to state 44
    BOOLEANO        shift and go to state 45

    s                              shift and go to state 1
    block                          shift and go to state 2
    instruccion                    shift and go to state 3
    print                          shift and go to state 4
    ifinstruction                  shift and go to state 5
    switchinstruction              shift and go to state 6
    whileinstruction               shift and go to state 7
    forinstruction                 shift and go to state 8
    declaration                    shift and go to state 9
    arraydeclaration               shift and go to state 10
    assignment                     shift and go to state 11
    breakstmt                      shift and go to state 12
    continuestmt                   shift and go to state 13
    functionstmt                   shift and go to state 14
    call                           shift and go to state 15
    returnstmt                     shift and go to state 16
    interfacecreation              shift and go to state 17
    interdeclaration               shift and go to state 18
    listArray                      shift and go to state 19
    typeof                         shift and go to state 20
    parseint                       shift and go to state 21
    parsefloat                     shift and go to state 22
    var_const                      shift and go to state 28
    valor                          shift and go to state 35

state 1

    (0) S' -> s .



state 2

    (1) s -> block .
    (2) block -> block . instruccion
    (4) instruccion -> . print
    (5) instruccion -> . ifinstruction
    (6) instruccion -> . switchinstruction
    (7) instruccion -> . whileinstruction
    (8) instruccion -> . forinstruction
    (9) instruccion -> . declaration
    (10) instruccion -> . arraydeclaration
    (11) instruccion -> . assignment
    (12) instruccion -> . breakstmt
    (13) instruccion -> . continuestmt
    (14) instruccion -> . functionstmt
    (15) instruccion -> . call
    (16) instruccion -> . returnstmt
    (17) instruccion -> . interfacecreation
    (18) instruccion -> . interdeclaration
    (19) instruccion -> . listArray PYC
    (20) instruccion -> . typeof PYC
    (21) instruccion -> . parseint PYC
    (22) instruccion -> . parsefloat PYC
    (23) print -> . CONSOLE PUNTO LOG PARIZQ expressionList PARDER PYC
    (24) ifinstruction -> . IF PARIZQ expression PARDER LLAVEIZQ block LLAVEDER
    (25) ifinstruction -> . IF PARIZQ expression PARDER LLAVEIZQ block LLAVEDER else_if_list
    (26) ifinstruction -> . IF PARIZQ expression PARDER LLAVEIZQ block LLAVEDER else
    (27) ifinstruction -> . IF PARIZQ expression PARDER LLAVEIZQ block LLAVEDER else_if_list else
    (32) switchinstruction -> . SWITCH PARIZQ expression PARDER LLAVEIZQ caseList LLAVEDER
    (33) switchinstruction -> . SWITCH PARIZQ expression PARDER LLAVEIZQ default LLAVEDER
    (34) switchinstruction -> . SWITCH PARIZQ expression PARDER LLAVEIZQ caseList default LLAVEDER
    (39) whileinstruction -> . WHILE PARIZQ expression PARDER LLAVEIZQ block LLAVEDER
    (40) forinstruction -> . FOR PARIZQ declaration expression PYC expression PARDER LLAVEIZQ block LLAVEDER
    (41) declaration -> . var_const ID DOSPTS type IG expression PYC
    (42) arraydeclaration -> . var_const ID DOSPTS type dimension IG expression PYC
    (43) assignment -> . ID indexes IG expression PYC
    (51) assignment -> . listArray IG expression PYC
    (52) assignment -> . ID IG expression PYC
    (69) breakstmt -> . BREAK PYC
    (70) continuestmt -> . CONTINUE PYC
    (57) functionstmt -> . FUNCTION ID funcparams functype LLAVEIZQ block LLAVEDER
    (55) call -> . ID PARIZQ expressionList PARDER PYC
    (56) call -> . ID PARIZQ PARDER PYC
    (53) returnstmt -> . RETURN expression PYC
    (54) returnstmt -> . RETURN PYC
    (60) interfacecreation -> . INTERFACE ID LLAVEIZQ attributeList LLAVEDER
    (46) interdeclaration -> . var_const ID DOSPTS ID IG LLAVEIZQ interfaceContent LLAVEDER PYC
    (109) listArray -> . listArray PUNTO TOSTRING PARIZQ PARDER
    (110) listArray -> . listArray PUNTO TOLOWERCASE PARIZQ PARDER
    (111) listArray -> . listArray PUNTO TOUPPERCASE PARIZQ PARDER
    (112) listArray -> . listArray PUNTO POP PARIZQ PARDER
    (113) listArray -> . listArray PUNTO JOIN PARIZQ PARDER
    (114) listArray -> . listArray PUNTO PUSH expression
    (115) listArray -> . listArray PUNTO INDEXOF expression
    (116) listArray -> . listArray PUNTO LENGTH
    (117) listArray -> . listArray PUNTO ID
    (118) listArray -> . listArray indexes
    (119) listArray -> . valor
    (125) typeof -> . TYPEOF expression
    (126) parseint -> . PARSEINT expression
    (127) parsefloat -> . PARSEFLOAT expression
    (49) var_const -> . VAR
    (50) var_const -> . CONST
    (100) valor -> . ENTERO
    (101) valor -> . DECIMAL
    (102) valor -> . CADENA
    (103) valor -> . CARACTER
    (104) valor -> . BOOLEANO
    (105) valor -> . ID

    $end            reduce using rule 1 (s -> block .)
    CONSOLE         shift and go to state 23
    IF              shift and go to state 24
    SWITCH          shift and go to state 25
    WHILE           shift and go to state 26
    FOR             shift and go to state 27
    ID              shift and go to state 29
    BREAK           shift and go to state 30
    CONTINUE        shift and go to state 31
    FUNCTION        shift and go to state 32
    RETURN          shift and go to state 33
    INTERFACE       shift and go to state 34
    TYPEOF          shift and go to state 36
    PARSEINT        shift and go to state 37
    PARSEFLOAT      shift and go to state 38
    VAR             shift and go to state 39
    CONST           shift and go to state 40
    ENTERO          shift and go to state 41
    DECIMAL         shift and go to state 42
    CADENA          shift and go to state 43
    CARACTER        shift and go to state 44
    BOOLEANO        shift and go to state 45

    instruccion                    shift and go to state 46
    print                          shift and go to state 4
    ifinstruction                  shift and go to state 5
    switchinstruction              shift and go to state 6
    whileinstruction               shift and go to state 7
    forinstruction                 shift and go to state 8
    declaration                    shift and go to state 9
    arraydeclaration               shift and go to state 10
    assignment                     shift and go to state 11
    breakstmt                      shift and go to state 12
    continuestmt                   shift and go to state 13
    functionstmt                   shift and go to state 14
    call                           shift and go to state 15
    returnstmt                     shift and go to state 16
    interfacecreation              shift and go to state 17
    interdeclaration               shift and go to state 18
    listArray                      shift and go to state 19
    typeof                         shift and go to state 20
    parseint                       shift and go to state 21
    parsefloat                     shift and go to state 22
    var_const                      shift and go to state 28
    valor                          shift and go to state 35

state 3

    (3) block -> instruccion .

    CONSOLE         reduce using rule 3 (block -> instruccion .)
    IF              reduce using rule 3 (block -> instruccion .)
    SWITCH          reduce using rule 3 (block -> instruccion .)
    WHILE           reduce using rule 3 (block -> instruccion .)
    FOR             reduce using rule 3 (block -> instruccion .)
    ID              reduce using rule 3 (block -> instruccion .)
    BREAK           reduce using rule 3 (block -> instruccion .)
    CONTINUE        reduce using rule 3 (block -> instruccion .)
    FUNCTION        reduce using rule 3 (block -> instruccion .)
    RETURN          reduce using rule 3 (block -> instruccion .)
    INTERFACE       reduce using rule 3 (block -> instruccion .)
    TYPEOF          reduce using rule 3 (block -> instruccion .)
    PARSEINT        reduce using rule 3 (block -> instruccion .)
    PARSEFLOAT      reduce using rule 3 (block -> instruccion .)
    VAR             reduce using rule 3 (block -> instruccion .)
    CONST           reduce using rule 3 (block -> instruccion .)
    ENTERO          reduce using rule 3 (block -> instruccion .)
    DECIMAL         reduce using rule 3 (block -> instruccion .)
    CADENA          reduce using rule 3 (block -> instruccion .)
    CARACTER        reduce using rule 3 (block -> instruccion .)
    BOOLEANO        reduce using rule 3 (block -> instruccion .)
    $end            reduce using rule 3 (block -> instruccion .)
    LLAVEDER        reduce using rule 3 (block -> instruccion .)
    DEFAULT         reduce using rule 3 (block -> instruccion .)
    CASE            reduce using rule 3 (block -> instruccion .)


state 4

    (4) instruccion -> print .

    CONSOLE         reduce using rule 4 (instruccion -> print .)
    IF              reduce using rule 4 (instruccion -> print .)
    SWITCH          reduce using rule 4 (instruccion -> print .)
    WHILE           reduce using rule 4 (instruccion -> print .)
    FOR             reduce using rule 4 (instruccion -> print .)
    ID              reduce using rule 4 (instruccion -> print .)
    BREAK           reduce using rule 4 (instruccion -> print .)
    CONTINUE        reduce using rule 4 (instruccion -> print .)
    FUNCTION        reduce using rule 4 (instruccion -> print .)
    RETURN          reduce using rule 4 (instruccion -> print .)
    INTERFACE       reduce using rule 4 (instruccion -> print .)
    TYPEOF          reduce using rule 4 (instruccion -> print .)
    PARSEINT        reduce using rule 4 (instruccion -> print .)
    PARSEFLOAT      reduce using rule 4 (instruccion -> print .)
    VAR             reduce using rule 4 (instruccion -> print .)
    CONST           reduce using rule 4 (instruccion -> print .)
    ENTERO          reduce using rule 4 (instruccion -> print .)
    DECIMAL         reduce using rule 4 (instruccion -> print .)
    CADENA          reduce using rule 4 (instruccion -> print .)
    CARACTER        reduce using rule 4 (instruccion -> print .)
    BOOLEANO        reduce using rule 4 (instruccion -> print .)
    $end            reduce using rule 4 (instruccion -> print .)
    LLAVEDER        reduce using rule 4 (instruccion -> print .)
    DEFAULT         reduce using rule 4 (instruccion -> print .)
    CASE            reduce using rule 4 (instruccion -> print .)


state 5

    (5) instruccion -> ifinstruction .

    CONSOLE         reduce using rule 5 (instruccion -> ifinstruction .)
    IF              reduce using rule 5 (instruccion -> ifinstruction .)
    SWITCH          reduce using rule 5 (instruccion -> ifinstruction .)
    WHILE           reduce using rule 5 (instruccion -> ifinstruction .)
    FOR             reduce using rule 5 (instruccion -> ifinstruction .)
    ID              reduce using rule 5 (instruccion -> ifinstruction .)
    BREAK           reduce using rule 5 (instruccion -> ifinstruction .)
    CONTINUE        reduce using rule 5 (instruccion -> ifinstruction .)
    FUNCTION        reduce using rule 5 (instruccion -> ifinstruction .)
    RETURN          reduce using rule 5 (instruccion -> ifinstruction .)
    INTERFACE       reduce using rule 5 (instruccion -> ifinstruction .)
    TYPEOF          reduce using rule 5 (instruccion -> ifinstruction .)
    PARSEINT        reduce using rule 5 (instruccion -> ifinstruction .)
    PARSEFLOAT      reduce using rule 5 (instruccion -> ifinstruction .)
    VAR             reduce using rule 5 (instruccion -> ifinstruction .)
    CONST           reduce using rule 5 (instruccion -> ifinstruction .)
    ENTERO          reduce using rule 5 (instruccion -> ifinstruction .)
    DECIMAL         reduce using rule 5 (instruccion -> ifinstruction .)
    CADENA          reduce using rule 5 (instruccion -> ifinstruction .)
    CARACTER        reduce using rule 5 (instruccion -> ifinstruction .)
    BOOLEANO        reduce using rule 5 (instruccion -> ifinstruction .)
    $end            reduce using rule 5 (instruccion -> ifinstruction .)
    LLAVEDER        reduce using rule 5 (instruccion -> ifinstruction .)
    DEFAULT         reduce using rule 5 (instruccion -> ifinstruction .)
    CASE            reduce using rule 5 (instruccion -> ifinstruction .)


state 6

    (6) instruccion -> switchinstruction .

    CONSOLE         reduce using rule 6 (instruccion -> switchinstruction .)
    IF              reduce using rule 6 (instruccion -> switchinstruction .)
    SWITCH          reduce using rule 6 (instruccion -> switchinstruction .)
    WHILE           reduce using rule 6 (instruccion -> switchinstruction .)
    FOR             reduce using rule 6 (instruccion -> switchinstruction .)
    ID              reduce using rule 6 (instruccion -> switchinstruction .)
    BREAK           reduce using rule 6 (instruccion -> switchinstruction .)
    CONTINUE        reduce using rule 6 (instruccion -> switchinstruction .)
    FUNCTION        reduce using rule 6 (instruccion -> switchinstruction .)
    RETURN          reduce using rule 6 (instruccion -> switchinstruction .)
    INTERFACE       reduce using rule 6 (instruccion -> switchinstruction .)
    TYPEOF          reduce using rule 6 (instruccion -> switchinstruction .)
    PARSEINT        reduce using rule 6 (instruccion -> switchinstruction .)
    PARSEFLOAT      reduce using rule 6 (instruccion -> switchinstruction .)
    VAR             reduce using rule 6 (instruccion -> switchinstruction .)
    CONST           reduce using rule 6 (instruccion -> switchinstruction .)
    ENTERO          reduce using rule 6 (instruccion -> switchinstruction .)
    DECIMAL         reduce using rule 6 (instruccion -> switchinstruction .)
    CADENA          reduce using rule 6 (instruccion -> switchinstruction .)
    CARACTER        reduce using rule 6 (instruccion -> switchinstruction .)
    BOOLEANO        reduce using rule 6 (instruccion -> switchinstruction .)
    $end            reduce using rule 6 (instruccion -> switchinstruction .)
    LLAVEDER        reduce using rule 6 (instruccion -> switchinstruction .)
    DEFAULT         reduce using rule 6 (instruccion -> switchinstruction .)
    CASE            reduce using rule 6 (instruccion -> switchinstruction .)


state 7

    (7) instruccion -> whileinstruction .

    CONSOLE         reduce using rule 7 (instruccion -> whileinstruction .)
    IF              reduce using rule 7 (instruccion -> whileinstruction .)
    SWITCH          reduce using rule 7 (instruccion -> whileinstruction .)
    WHILE           reduce using rule 7 (instruccion -> whileinstruction .)
    FOR             reduce using rule 7 (instruccion -> whileinstruction .)
    ID              reduce using rule 7 (instruccion -> whileinstruction .)
    BREAK           reduce using rule 7 (instruccion -> whileinstruction .)
    CONTINUE        reduce using rule 7 (instruccion -> whileinstruction .)
    FUNCTION        reduce using rule 7 (instruccion -> whileinstruction .)
    RETURN          reduce using rule 7 (instruccion -> whileinstruction .)
    INTERFACE       reduce using rule 7 (instruccion -> whileinstruction .)
    TYPEOF          reduce using rule 7 (instruccion -> whileinstruction .)
    PARSEINT        reduce using rule 7 (instruccion -> whileinstruction .)
    PARSEFLOAT      reduce using rule 7 (instruccion -> whileinstruction .)
    VAR             reduce using rule 7 (instruccion -> whileinstruction .)
    CONST           reduce using rule 7 (instruccion -> whileinstruction .)
    ENTERO          reduce using rule 7 (instruccion -> whileinstruction .)
    DECIMAL         reduce using rule 7 (instruccion -> whileinstruction .)
    CADENA          reduce using rule 7 (instruccion -> whileinstruction .)
    CARACTER        reduce using rule 7 (instruccion -> whileinstruction .)
    BOOLEANO        reduce using rule 7 (instruccion -> whileinstruction .)
    $end            reduce using rule 7 (instruccion -> whileinstruction .)
    LLAVEDER        reduce using rule 7 (instruccion -> whileinstruction .)
    DEFAULT         reduce using rule 7 (instruccion -> whileinstruction .)
    CASE            reduce using rule 7 (instruccion -> whileinstruction .)


state 8

    (8) instruccion -> forinstruction .

    CONSOLE         reduce using rule 8 (instruccion -> forinstruction .)
    IF              reduce using rule 8 (instruccion -> forinstruction .)
    SWITCH          reduce using rule 8 (instruccion -> forinstruction .)
    WHILE           reduce using rule 8 (instruccion -> forinstruction .)
    FOR             reduce using rule 8 (instruccion -> forinstruction .)
    ID              reduce using rule 8 (instruccion -> forinstruction .)
    BREAK           reduce using rule 8 (instruccion -> forinstruction .)
    CONTINUE        reduce using rule 8 (instruccion -> forinstruction .)
    FUNCTION        reduce using rule 8 (instruccion -> forinstruction .)
    RETURN          reduce using rule 8 (instruccion -> forinstruction .)
    INTERFACE       reduce using rule 8 (instruccion -> forinstruction .)
    TYPEOF          reduce using rule 8 (instruccion -> forinstruction .)
    PARSEINT        reduce using rule 8 (instruccion -> forinstruction .)
    PARSEFLOAT      reduce using rule 8 (instruccion -> forinstruction .)
    VAR             reduce using rule 8 (instruccion -> forinstruction .)
    CONST           reduce using rule 8 (instruccion -> forinstruction .)
    ENTERO          reduce using rule 8 (instruccion -> forinstruction .)
    DECIMAL         reduce using rule 8 (instruccion -> forinstruction .)
    CADENA          reduce using rule 8 (instruccion -> forinstruction .)
    CARACTER        reduce using rule 8 (instruccion -> forinstruction .)
    BOOLEANO        reduce using rule 8 (instruccion -> forinstruction .)
    $end            reduce using rule 8 (instruccion -> forinstruction .)
    LLAVEDER        reduce using rule 8 (instruccion -> forinstruction .)
    DEFAULT         reduce using rule 8 (instruccion -> forinstruction .)
    CASE            reduce using rule 8 (instruccion -> forinstruction .)


state 9

    (9) instruccion -> declaration .
